samples/_failures_safe/1761342100_26e709_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ddf995ec.c: In function ‘next_token’:
./samples/SAFE/__tmp_ddf995ec.c:148:23: error: missing terminating " character
  148 |                strchr("+-*/=<>!&
      |                       ^~~~~~~~~~
./samples/SAFE/__tmp_ddf995ec.c:148:16: error: expected expression at end of input
  148 |                strchr("+-*/=<>!&
      |                ^~~~~~
./samples/SAFE/__tmp_ddf995ec.c:148:16: error: too few arguments to function ‘strchr’
In file included from ./samples/SAFE/__tmp_ddf995ec.c:4:
/usr/include/string.h:246:14: note: declared here
  246 | extern char *strchr (const char *__s, int __c)
      |              ^~~~~~
./samples/SAFE/__tmp_ddf995ec.c:148:16: error: expected declaration or statement at end of input
  148 |                strchr("+-*/=<>!&
      |                ^~~~~~
./samples/SAFE/__tmp_ddf995ec.c:148:16: error: expected declaration or statement at end of input
